--- a/.github/ISSUE_TEMPLATE/user_story.yml
+++ b/.github/ISSUE_TEMPLATE/user_story.yml
@@ -1,7 +1,7 @@
 name: New User Story
 title: <brief description of the requirement>
 description: "Requirement to be implemented (Feature, User Story)"
-labels: ["task"]
+labels: ["request"]
 projects: ["AlissonGSantos/projects/1"]
 body:
   - type: markdown
