--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -125,10 +125,16 @@ jobs:
           cd backend/${{ matrix.project }}
           mvn clean install
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build da imagem docker
         uses: docker/build-push-action@v6
         with:
-          push: false
+          push: true
           context: backend/${{ matrix.project }}
           file: backend/Dockerfile
           tags: "${{ matrix.project }}:${{ steps.pom_version.outputs.version }}"
