chore: initial setup for Funcionario-service
Note: configuração do JPA e testes de conectividade, criação do docker compose para desenvolmento

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -16,9 +16,7 @@ services:
       - autenticacaoservice
 
   funcionarioservice:
-    build:
-      context: ./funcionario-service
-      dockerfile: ../Dockerfile
+    image: salgado2004/dac-ufpr-emiratads-funcionario-service
     ports:
       - "8083:8080"
     depends_on:
