--- a/backend/funcionario-service/pom.xml
+++ b/backend/funcionario-service/pom.xml
@@ -14,7 +14,12 @@
 	<description>Módulo responsável pela manutenção dos dados de funcionários</description>
 
 	<properties/>
-	<dependencies/>
+	<dependencies>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
