--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -137,4 +137,4 @@ jobs:
           push: true
           context: backend/${{ matrix.project }}
           file: backend/Dockerfile
-          tags: "${{ vars.DOCKERHUB_REPOSITORY }}-${{ matrix.project }}:${{ steps.pom_version.outputs.version }}","${{ vars.DOCKERHUB_REPOSITORY }}-${{ matrix.project }}:latest"
+          tags: "${{ vars.DOCKERHUB_REPOSITORY }}-${{ matrix.project }}:${{ steps.pom_version.outputs.version }},${{ vars.DOCKERHUB_REPOSITORY }}-${{ matrix.project }}:latest"
