chore: initial cliente-service configuration

--- a/backend/cliente-service/src/main/resources/application.properties
+++ b/backend/cliente-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=cliente-service
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://dbdevelopment:5432/postgres
+spring.datasource.username=emiratads_cliente_user
+spring.datasource.password=senha1
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=emiratads_cliente
