--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,9 +7,7 @@ services:
       - "8081:8080"
 
   clienteservice:
-    build:
-      context: ./cliente-service
-      dockerfile: ../Dockerfile
+    image: salgado2004/dac-ufpr-emiratads-cliente-service
     ports:
       - "8082:8080"
     depends_on:
