fix: docker compatibility

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   autenticacaoservice:
+    platform: linux/amd64
     build:
       context: ./autenticacao-service
       dockerfile: ../Dockerfile
