--- a/backend/funcionario-service/docker-compose.yml
+++ b/backend/funcionario-service/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - emiratads-network
 
   funcionarioservice:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: ../Dockerfile
