--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,17 +1,61 @@
 services:
+  dbdevelopment:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: senha0
+    volumes:
+      - ./database/sql:/sql
+      - ./database/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+    ports:
+      - 5433:5432
+    networks:
+      - emiratads-network
+
+  rabbitmq:
+    image: rabbitmq
+    ports:
+      - "5672:5672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASSWORD: guest
+    networks:
+      - emiratads-network
+
+  sagaorchestrator:
+    build:
+      context: ./saga-orchestration-service
+      dockerfile: ../Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - rabbitmq
+    networks:
+      - emiratads-network
+
   autenticacaoservice:
     build:
       context: ./autenticacao-service
       dockerfile: ../Dockerfile
     ports:
       - "8081:8080"
+    networks:
+      - emiratads-network
+    depends_on:
+      - rabbitmq
 
   clienteservice:
-    image: salgado2004/dac-ufpr-emiratads-cliente-service
+    build:
+      context: ./cliente-service
+      dockerfile: ../Dockerfile
     ports:
       - "8082:8080"
     depends_on:
       - autenticacaoservice
+      - dbdevelopment
+      - rabbitmq
+    networks:
+      - emiratads-network
 
   funcionarioservice:
     image: salgado2004/dac-ufpr-emiratads-funcionario-service
@@ -19,6 +63,9 @@ services:
       - "8083:8080"
     depends_on:
       - autenticacaoservice
+      - dbdevelopment
+    networks:
+      - emiratads-network
 
   reservaservice:
     build:
@@ -28,6 +75,9 @@ services:
       - "8084:8080"
     depends_on:
       - autenticacaoservice
+      - dbdevelopment
+    networks:
+      - emiratads-network
 
   vooservice:
     build:
@@ -37,3 +87,10 @@ services:
       - "8085:8080"
     depends_on:
       - autenticacaoservice
+      - dbdevelopment
+    networks:
+      - emiratads-network
+
+networks:
+  emiratads-network:
+    driver: bridge
