--- a/backend/autenticacao-service/pom.xml
+++ b/backend/autenticacao-service/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -45,13 +50,13 @@
 					</args>
 					<compilerPlugins>
 						<plugin>spring</plugin>
-						<plugin>jpa</plugin>
 						<plugin>all-open</plugin>
 					</compilerPlugins>
 					<pluginOptions>
-						<option>all-open:annotation=jakarta.persistence.Entity</option>
-						<option>all-open:annotation=jakarta.persistence.MappedSuperclass</option>
-						<option>all-open:annotation=jakarta.persistence.Embeddable</option>
+						<option>all-open:annotation=org.springframework.stereotype.Component</option>
+						<option>all-open:annotation=org.springframework.context.annotation.Configuration</option>
+						<option>all-open:annotation=org.springframework.web.bind.annotation.RestController</option>
+						<option>all-open:annotation=org.springframework.data.mongodb.core.mapping.Document</option>
 					</pluginOptions>
 				</configuration>
 				<dependencies>
@@ -60,10 +65,10 @@
 						<artifactId>kotlin-maven-allopen</artifactId>
 						<version>${kotlin.version}</version>
 					</dependency>
+
 					<dependency>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-maven-noarg</artifactId>
-						<version>${kotlin.version}</version>
+						<groupId>org.springframework.data</groupId>
+						<artifactId>spring-data-mongodb</artifactId>
 					</dependency>
 				</dependencies>
 			</plugin>
