--- a/backend/voo-service/src/main/resources/application.properties
+++ b/backend/voo-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=voo-service
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://dbdevelopment:5432/postgres
+spring.datasource.username=emiratads_voo_user
+spring.datasource.password=senha3
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=emiratads_voo
