refactor: pom parent strategy
Note: Removendo o JPA como dependencia default e adicionando o orchestrador como modulo do pom parent

--- a/backend/reserva-service/pom.xml
+++ b/backend/reserva-service/pom.xml
@@ -14,7 +14,16 @@
 	<description>Módulo responsável pela manutenção das reservas feitas pelos clientes</description>
 
 	<properties/>
-	<dependencies/>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
