--- a/backend/autenticacao-service/pom.xml
+++ b/backend/autenticacao-service/pom.xml
@@ -16,7 +16,7 @@
 	<properties/>
 
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -25,11 +25,16 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -67,8 +72,9 @@
 					</dependency>
 
 					<dependency>
-						<groupId>org.springframework.data</groupId>
-						<artifactId>spring-data-mongodb</artifactId>
+						<groupId>org.jetbrains.kotlin</groupId>
+						<artifactId>kotlin-maven-noarg</artifactId>
+						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
