--- a/backend/autenticacao-service/src/main/resources/application.properties
+++ b/backend/autenticacao-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=autenticacao-service
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+api.security.token.secret=12345678
