--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     networks:
       - emiratads-network
 
+  mongodb:
+    image: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    networks:
+      - emiratads-network
+
   rabbitmq:
     image: rabbitmq
     ports:
@@ -40,8 +48,8 @@ services:
       dockerfile: ../Dockerfile
     ports:
       - "8081:8080"
-      - "5005:5005"
     depends_on:
+      - mongodb
       - rabbitmq
     networks:
       - emiratads-network
