--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,12 +37,14 @@
             <name>Raul Ferreira Bana</name>
         </developer>
     </developers>
+
 	<modules>
 		<module>autenticacao-service</module>
 		<module>cliente-service</module>
 		<module>funcionario-service</module>
 		<module>reserva-service</module>
 		<module>voo-service</module>
+		<module>saga-orchestration-service</module>
 	</modules>
 
 	<properties>
@@ -74,7 +76,7 @@
 		<dependency>
 			<groupId>br.ufpr.dac</groupId>
 			<artifactId>backend-services-utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -111,6 +113,18 @@
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
 				<version>42.3.9</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>2.10.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jetbrains.kotlinx</groupId>
+				<artifactId>kotlinx-coroutines-core</artifactId>
+				<version>1.8.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
