--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -107,9 +107,37 @@ jobs:
           echo "Projetos para build: $MATRIX_PROJECTS"
           echo "matrix_projects=$MATRIX_PROJECTS" >> $GITHUB_OUTPUT
 
+  build-utils:
+    name: Build e instalação do utils
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Cache Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: maven-repo-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-repo-${{ runner.os }}-
+
+      - name: Configurando java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build e instalação do utils no repositório local
+        run: |
+          echo "Instalando utils no repositório local do Maven"
+          cd backend/backend-services-utils
+          mvn clean install
+          cd ../
+
   build:
     name: Realizando build dos projetos
-    needs: detect-projects
+    needs: [detect-projects, build-utils]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -117,6 +145,14 @@ jobs:
     steps: 
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Cache Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: maven-repo-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-repo-${{ runner.os }}-
 
       - name: Configurando java
         uses: actions/setup-java@v4
@@ -134,7 +170,7 @@ jobs:
         run: |
           echo "Processo de build para o projeto ${{ matrix.project }}:${{ steps.pom_version.outputs.version }}"
           cd backend/${{ matrix.project }}
-          mvn clean install
+          mvn clean install -DskipTests=true -Dmaven.test.skip=true
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
